[package]
name = "cncs-sm2-kit"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Chinese National Cryptography Standard - SM2 Kit"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/CNCS-rs"
homepage = "https://github.com/bk-rs/CNCS-rs"
documentation = "https://docs.rs/cncs-sm2-kit"
keywords = []
categories = []
readme = "README.md"

[dependencies]
libsm = { version = "0.4", default-features = false }
gmsm = { version = "0.1", default-features = false }

num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
